synchronized statements now use lock Object instead of Long